<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:background="#2E7D32">

    <LinearLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home4"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navArt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ART"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art5"
            android:textColor="#A5D6A7"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navProgress"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHART"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress2"
            android:textColor="#A5D6A7"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navChat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CHAT"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat3"
            android:textColor="#A5D6A7"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navProfile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/USER"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile2"
            android:textColor="#A5D6A7"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

</LinearLayout>